--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
+    "babel-polyfill": "^6.26.0",
     "bootstrap": "^5.2.0",
-    "bootstrap-icons": "^1.10.2"
+    "bootstrap-icons": "^1.10.2",
+    "core-js": "^3.26.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
